# paidy

./: Cargo.toml  README.md  SimpleRestaurantApi.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: db.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
