[package]
name = "server"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

fastrand = "2.2.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
axum = { version = "0.7.7" }
tokio = { version = "1.41.1", features = ["full"] }
chrono = "0.4.38"